Body overflow fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,8 @@ body {
     opacity: 0.7;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .wrapper-container {
